--- a/mypy.ini
+++ b/mypy.ini
@@ -2,7 +2,7 @@
 files = src
 explicit_package_bases = True
 namespace_packages = True
-exclude = (?x)(^src/tests/.*$)
+exclude = (?x)(^src/tests/.*$|^src/modules/train/.*$)
 
 [mypy-h5py]
 ignore_missing_imports = True
