--- a/mypy.ini
+++ b/mypy.ini
@@ -18,3 +18,12 @@ ignore_missing_imports = True
 
 [mypy-torchdiffeq]
 ignore_missing_imports = True
+
+[mypy-scipy.*]
+ignore_missing_imports = True
+
+[mypy-schedulefree.*]
+ignore_missing_imports = True
+
+[mypy-src.modules.train.*]
+ignore_errors = True
