--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
     "torch>=2.8.0",
     "torchdiffeq>=0.2.5",
     "tqdm>=4.67.1",
+    "python-dotenv>=1.0.1",
+    "requests>=2.32.5",
+    "types-requests>=2.32.0.20241016",
 ]
 
 [tool.ruff.lint]
