--- a/mypy.ini
+++ b/mypy.ini
@@ -22,8 +22,13 @@ ignore_missing_imports = True
 [mypy-scipy.*]
 ignore_missing_imports = True
 
+[mypy-schedulefree]
+ignore_missing_imports = True
+disable_error_code = import-untyped
+
 [mypy-schedulefree.*]
 ignore_missing_imports = True
+disable_error_code = import-untyped
 
 [mypy-src.modules.train.*]
 ignore_errors = True
